# library-fullstack

./: LICENSE  README.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: generate-client.yml  playwright.yml  smokeshow.yml  test-backend.yml  test-docker-compose.yml
app/: .gitignore  README.md  index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: App.tsx  main.tsx
app/src/client/: sdk.gen.ts  types.gen.ts
app/src/components/: Author.tsx  Book.tsx  BookCopyStatus.tsx  BookStatus.tsx  DeleteAuthor.tsx  DeleteBook.tsx  DeleteBookCopy.tsx  DeleteGenre.tsx  Footer.tsx  FormattedDate.tsx  Genre.tsx  Header.tsx  Layout.tsx  LoginFlip.tsx
app/src/core/: sdk.gen.ts
app/src/hooks/: useAuth.ts
app/src/lib/: api.ts  supabase.ts  utils.ts
app/src/pages/: AuthorCreate.tsx  AuthorDetails.tsx  AuthorEdit.tsx  Authors.tsx  BookCreate.tsx  BookDetails.tsx  BookEdit.tsx  Books.tsx  Copies.tsx  CopyCreate.tsx  CopyDetails.tsx  CopyEdit.tsx  GenreCreate.tsx  GenreDetails.tsx  GenreEdit.tsx  Genres.tsx  Home.tsx  (+4 more)
app/tests/: auth.setup.ts  login.spec.ts  user-settings.spec.ts
server/: .env  README.md  main.py  openapi.json  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0a6a99dbc9dc_updated_id.py  159d0802ef2f_added_user_model.py  1a7dbdff6bb4_updated_genre_model.py  2507b0ea1b4f_updated_book_author_and_genre_models.py  2db6b48e3ddd_added_user_model.py  412bffb2e39b_added_genre_model.py  41d04439b1e9_extended_book_s_summary.py  42b190131c56_extended_book_s_summary.py  5f6376d48989_updated_bookbase.py  668021f3c9a0_models_cleanup.py  72a7f129a139_added_user_model.py  818800736979_using_date_type.py  8a498fbc8ce4_extended_life_span.py  9d2166c7e9bd_removed_bookcopy_model.py  abf9c500945b_extended_life_span.py  bf270f0c90a6_updated_bookpublic.py  c1f18522c97f_reverted_bookpublic.py  d179c201eeac_added_bookcopy_model.py  e873480e93c8_added_book_model.py  f32cf9bd1160_added_author_model.py  f4ac2ca77bf4_make_book_s_title_unique.py
server/app/: crud.py  main.py  models.py
server/app/api/: main.py
server/app/api/routes/: authors.py  available_book_copies.py  available_books.py  book_copies.py  books.py  genres.py
server/app/core/: config.py
server/app/tests/utils/: item.py
server/core/: config.py
(+1 files in other folders)
